syntax = "proto3";

package matchservice_package;

message Boxer {
  int32 id = 1;
  string fullName = 2;
  int64 birthDate = 3;
  int32 height = 4;
  double weight = 5;
}

message Match {
  int32 id = 1;
  Boxer homeBoxer = 2;
  Boxer awayBoxer = 3;
  int64 matchTime = 4;
  bool isFinished = 5;
  optional Boxer winnerBoxer = 6;
}

message GetAllMatchesResponse {
    int32 code = 1;
    string message = 2;
    repeated Match matches = 3;
}

message GetMatchesOfBoxerRequest {
    int32 boxerId = 1;
}

message GetMatchesOfBoxerResponse {
  int32 code = 1;
  string message = 2;
  Boxer boxer = 3;
  repeated Match matches = 4;
}

message UpdateMatchRequest {
    int32 id = 1;
    int32 homeBoxerId = 2;
    int32 awayBoxerId = 3;
    int64 matchTime = 4;
    bool isFinished = 5;
    int32 winnerBoxerId = 6;
}

message UpdateMatchResponse {
    int32 code = 1;
    string message = 2;
    Match match = 3;
}

message Null {};

service MatchService {
  rpc GetAllMatches(Null) returns (GetAllMatchesResponse);
  rpc GetAllMatchesOfABoxer(GetMatchesOfBoxerRequest) returns (GetMatchesOfBoxerResponse);
  rpc UpdateMatch(UpdateMatchRequest) returns (UpdateMatchResponse);
  rpc Mock(Null) returns (Null) {};
}